[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/final_score/FinalScore.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/Comical Cartoon.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://resources/fonts/Comical Cartoon.ttf"

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = SubResource( 2 )

[node name="FinalScore" type="Node2D"]
script = ExtResource( 1 )

[node name="GAME OVER" type="RichTextLabel" parent="."]
margin_left = 389.474
margin_top = 179.842
margin_right = 636.474
margin_bottom = 226.842
custom_fonts/normal_font = SubResource( 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DIST" type="RichTextLabel" parent="."]
margin_left = 316.842
margin_top = 249.652
margin_right = 563.842
margin_bottom = 296.652
custom_fonts/normal_font = SubResource( 1 )
text = "DIST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DIST_POINTS" type="RichTextLabel" parent="."]
margin_left = 316.842
margin_top = 249.652
margin_right = 563.842
margin_bottom = 296.652
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TIME" type="RichTextLabel" parent="."]
margin_left = 316.79
margin_top = 305.316
margin_right = 563.79
margin_bottom = 352.316
custom_fonts/normal_font = SubResource( 1 )
text = "TIME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TIME_COUNT" type="RichTextLabel" parent="."]
margin_left = 316.79
margin_top = 305.316
margin_right = 563.79
margin_bottom = 352.316
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE" type="RichTextLabel" parent="."]
margin_left = 316.79
margin_top = 357.211
margin_right = 563.79
margin_bottom = 404.211
custom_fonts/normal_font = SubResource( 1 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE_COUNT" type="RichTextLabel" parent="."]
margin_left = 316.79
margin_top = 357.211
margin_right = 563.79
margin_bottom = 404.211
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DIALOGUE" type="RichTextLabel" parent="."]
margin_left = 375.0
margin_top = 443.0
margin_right = 668.0
margin_bottom = 473.0
custom_fonts/normal_font = SubResource( 3 )
text = "PRESS SPACE TO RESTART"
__meta__ = {
"_edit_use_anchors_": false
}
